# rs-ts-demo

./: Cargo.toml  README.md  build.rs  package-lock.json  package.json
src/: config.rs  errors.rs  main.rs  router.rs  state.rs
src/frontend/: index.html  main.tsx  state.ts
src/frontend/components/: form.tsx  list.tsx
