[package]
name = "rs-ts-demo"
version = "0.1.0"

authors = ["Michael Schoonmaker <hello@schoonology.com>"]
description = "Demo of a mixed Rust/TypeScript application."
edition = "2021"
license = "MPL-2.0"
rust-version = "1.78.0"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = { features = ["serde"], version = "0.4.38" }
envconfig = "0.10.0"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
tokio = "1.38.0"
tokio-stream = { features = ["sync"], version = "0.1.15" }
tower-http = { features = ["fs"], version = "0.5.2" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
http-body-util = "0.1.2"
tower = { version = "0.4.13", features = ["util"] }
